# CCommunicator

./: CMakeLists.txt  CommunicateMainWindow.cpp  CommunicateMainWindow.h  main.cpp
core/: ConnectionUtils.cpp  ConnectionUtils.h  ListContextInfo.cpp  ListContextInfo.h  SessionContextRole.h  SessionDrawDelegate.cpp  SessionDrawDelegate.h
core/historyContainers/: HistoryContainers.cpp  HistoryContainers.h  MetaMessages.cpp  MetaMessages.h
core/sessions/: Session.cpp  Session.h  SessionError.cpp  SessionError.h  SessionHub.cpp  SessionHub.h  SessionInfo.cpp  SessionInfo.h  SessionProtos.h
document/: 设计自己的小传输协议 导论与概念.md  设计自己的小传输协议 状态机解析与封装抽象.md
ui/: CommunicateMainWindow.cpp  CommunicateMainWindow.h  CommunicateMainWindow.ui  ToolsEnum.h
ui/ToolSide/: ToolPanel.cpp  ToolPanel.h
ui/communication_main/: ChatBubble.cpp  ChatBubble.h  ChatListPanel.cpp  ChatListPanel.h  ChatMainPanel.cpp  ChatMainPanel.h  CommunicatableStatus.h  HistoryManagerSchedular.cpp  HistoryManagerSchedular.h
ui/connectors/: AddPanel.cpp  AddPanel.h  ConnectorDelegate.cpp  ConnectorDelegate.h  ConnectorEnumType.h  ConnectorsWidget.cpp  ConnectorsWidget.h
ui/selfInfo/: InfoWidget.cpp  InfoWidget.h
ui/settings/: InfoWidget.cpp  InfoWidget.h  SettingsWidget.cpp  SettingsWidget.h
